Replacing String messages with TextComponent